# modrinth-challenge

./: .env.example  Cargo.toml  Readme.md
src/: error.rs  main.rs  services.rs  term.rs
src/models/: project.rs
src/services/: projects.rs
