[package]
name = "modrinth_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
litcrypt = "0.3.0"
once_cell = "1.18.0"
thiserror = "1.0.50"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
colored = "2.0.4"
tokio = { version = "1.33.0", default-features = false, features = [
    "rt",
    "macros",
    "rt-multi-thread",
] }
